Changed app name, fix deprecated syntax

--- a/stackato.yml
+++ b/stackato.yml
@@ -1,9 +1,7 @@
-name: hellodjango
+name: hello-django
 
 framework:
   type: buildpack
 
 services:
-  postgresql: hellodjango-db
-
-
+  hello-django-db: postgresql
